--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ import org.opensearch.gradle.test.RestIntegTestTask
 
 buildscript {
     ext {
-        opensearch_version = System.getProperty("opensearch.version", "2.0.0-rc1-SNAPSHOT")
+        opensearch_version = System.getProperty("opensearch.version", "3.0.0-SNAPSHOT")
         isSnapshot = "true" == System.getProperty("build.snapshot", "true")
         buildVersionQualifier = System.getProperty("build.version_qualifier", "rc1")
     }
@@ -31,6 +31,7 @@ plugins {
 apply plugin: 'opensearch.opensearchplugin'
 apply plugin: 'opensearch.testclusters'
 apply plugin: 'opensearch.java-rest-test'
+apply plugin: 'opensearch.pluginzip'
 
 ext {
     projectSubstitutions = [:]
@@ -286,6 +287,18 @@ afterEvaluate {
             include archiveName
             rename archiveName, "${packageName}-${version}.deb"
             doLast { delete file("$buildDir/distributions/$archiveName") }
+        }
+    }
+}
+
+
+publishing {
+    publications {
+        pluginZip(MavenPublication) { publication ->
+            pom {
+              name = "job-scheduler"
+              description = "job-scheduler"
+            }
         }
     }
 }
